<resources>
    <string name="app_name">Insanyah</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="about">About Us</string>
    <string name="home">Home</string>
    <string name="platform_to_...">Insanyah is a social network that connects non-profit organizations, volunteers, donors, and companies to achieve goals that serve humanity</string>
    <string name="contact_us">Contact Us</string>
    <string name="subject">Subject</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="tell_us_your_story">Your message...</string>
    <string name="send">SEND</string>
    <string name="follow_us">FOLLOW US</string>
    <string name="all_right">© All Rights Reserved to Nas Hope, LLC, 2015</string>

    <string name="go_back">Go Back</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="forr">Donation Program:</string>
    <string name="how_frequently">How frequently would \n you like to donate?</string>
    <string name="next_step">Next Step</string>


    <string name="new_card">New Card</string>
    <string name="cvv">CVV:</string>
    <string name="valid_unitl">Valid Until:</string>
    <string name="card_holder">Name on the Card:</string>
    <string name="existing_card">Existing Card</string>
    <string name="select_card">Select Card:</string>
    <string name="enter_cvv">Enter CVV:</string>

    <string name="representative_donation">Cash</string>
    <string name="in_kind_donation">In-Kind</string>
    <string name="online_donation">Online</string>
    <string name="city">City:</string>
    <string name="neighborhood">Neighborhood:</string>
    <string name="address">Address:</string>
    <string name="donation_date">Collection Day:</string>
    <string name="delivery_time">Collection Time:</string>
    <string name="amount">Amount:</string>
    <string name="fifty">50</string>
    <string name="hundred">100</string>
    <string name="two_hundred">200</string>
    <string name="type">type</string>
    <string name="description">Description:</string>

    <string name="already_donating_...">Already Donating Check My Donations</string>
    <string name="five_hours">5 hrs</string>
    <string name="hya_hyah">Hya Hyah - هي حياة</string>
    <string name="raghy">agasgagkjhajk jhjkhakshkajhs kjjshsajkhsjhs dgsahagssg khjaassjh djhdskjhdds hgdhsggd sshsjsj jwdjhdhdshj</string>
    <string name="five_hundred_likes">500 likeModels</string>
    <string name="share">Share</string>
    <string name="seven_hundred_...">700/1000$ (Remaining 300$)</string>
    <string name="one_time_don">One time donationModel on March 17th</string>
    <string name="view_plan">View Plan</string>
    <string name="view_report">View Report</string>

    <string name="news_feed">News Feed</string>
    <string name="my_donations">My Donations</string>
    <string name="communicate">Communicate</string>
    <string name="Share">Share</string>
    <string name="donate">Donate</string>

    <string name="select_your_interests">Select Your Interests</string>
    <string name="your_most_used">Your Most Used</string>
    <string name="charity">Charity</string>
    <string name="elderly">Elderly</string>
    <string name="orphans">Orphans</string>
    <string name="poverty">Poverty</string>
    <string name="special_needs">Special \n Needs</string>
    <string name="ngos">NGOs</string>
    <string name="hunger">Hunger</string>
    <string name="water">Water</string>
    <string name="development">Development</string>
    <string name="women_empowerment">Women \n Empowerment</string>
    <string name="youth">Youth</string>
    <string name="education">Education</string>
    <string name="culture">Culture</string>
    <string name="health">Health</string>
    <string name="community_sustainability">Community \n Sustainability</string>
    <string name="pertnerships">Partnerships</string>
    <string name="ecology">Ecology</string>
    <string name="agriculture">Agriculture</string>
    <string name="animals">Animals</string>
    <string name="underwater_life">Underwater \n Life</string>
    <string name="environment">Environment</string>
    <string name="climate_change">Climate \n Change</string>
    <string name="life_on_earth">Life on Earth</string>
    <string name="economic">Economic</string>
    <string name="economics">Economics</string>
    <string name="research">Research</string>
    <string name="industry">Industry</string>
    <string name="energy">Energy</string>
    <string name="responsible_consumption">Responsible \n Consumption</string>
    <string name="human_rights">Human Rights</string>
    <string name="refuges">Refugees</string>
    <string name="reduce_inequalities">Reduce \n Inequalities</string>
    <string name="peace_and_justice">Peace and \n Justice</string>
    <string name="gender_equality">Gender Equality</string>
    <string name="tourism">Tourism</string>
    <string name="confirm">Confirm</string>

    <string name="thank_you">Thanks</string>
    <string name="you_are_the_reason">for making a difference in someone\'s life</string>

    <string name="donation_plan">Donation Plan</string>
    <string name="you_currently_donating">Your Donation Plan Is:</string>
    <string name="fifty_pounds">50 EGP</string>
    <string name="total_amount_donated">Total Donated Amount till Now: 150 EGP</string>
    <string name="donation_type">Donation Type: Monthly</string>
    <string name="next_donation_date">Upcoming Donation Date:</string>
    <string name="friday">Friday</string>
    <string name="june">Friday, 23 June 2017 @6pm</string>
    <string name="twenty_days_rem">Remaining Days: 20</string>
    <string name="change_plan">Change Plan</string>
    <string name="cancel_donation">Cancel Donation</string>

    <string name="donation_campaign_results">Donation Campaign Results</string>
    <string name="donation_report">Donation Report</string>

    <string name="looks_like_...">It seems that this is your first time to donate, please check the newsfeed for donationModel opportunities</string>
    <string name="fri_june">Friday, 23 June 2017</string>
    <string name="nine_am_donation_for_nogname">9am - Donation For NOGName</string>

    <string name="required_1000">Required\n   1000$</string>
    <string name="remaining_300">Remaining\n   300$</string>
    <string name="donate_now">Donate \n Now</string>

    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_interests">Select Interests</string>
    <string name="timeline">Timeline</string>
    <string name="about_us">About Us</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_data">01114441051</string>
    <string name="address_data">16 Shaalan St. Ezbet KhairAllah, Cairo, Egypt.</string>
    <string name="email_data">execoffice@kheirwabaraka.org</string>
    <string name="website">Website</string>
    <string name="website_data">www.kheirwabaraka.org</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="facebook_page_data">https://www.facebook.com/pg/KheirWaBaraka.org/</string>
    <string name="twitter_page">Twitter Page</string>
    <string name="twitter_page_data">none</string>
    <string name="country">Country</string>
    <string name="country_data">Egypt</string>
    <string name="city_data">Cairo</string>
    <string name="neighborhood_data">Maadi</string>
    <string name="sector">Work Area</string>
    <string name="sector_data">Street 105</string>
    <string name="reg_date">Registration Date</string>
    <string name="reg_date_data">1/4/1995</string>
    <string name="reg_number">Registration Number</string>
    <string name="reg_number_data">7662726</string>
    <string name="geo_scope">Geographical Scope of Work</string>
    <string name="geo_scope_data">1</string>
    <string name="sponsors">Sponsors</string>
    <string name="sponsors_data">UNICEF, Sawiris Foundation, Informal Settlements Development Fund, McDonald’s, The Islamic Bank of Abu Dhabi, Arab Banking Corporation, Alef Bookstore, Crédit Agricole Bank, Gourmet, La Poire, Cairo Scan, MSD pharmaceutical Company, Hassan Allam Holding, The British Embassy and IBM</string>
    <string name="Donations">Donations</string>
    <string name="volunteers">Volunteering</string>
    <string name="media">Media</string>
    <string name="nog_name">NOG Name</string>
    <string name="choose_language">Choose Language</string>
    <string name="if_you_read">f you read and listen to two articles every day, your reading and listening skills can improve fast. You can learn quickly and after some time you will not have to translate into your own language. You will simply understand. Why should you do this?

When you listen to people in your native language, you do not translate. You simply understand. The same has to be in English. When you learn English, you have to learn the whole sentences in context.</string>
    <string name="skills">Skills</string>
    <string name="volunteer_now">Volunteer \n Now</string>


    <string name="only_this_time">Once</string>
    <string name="every_month">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="semi_annually">Semi-annual</string>
    <string name="annually">Annually</string>
    <string name="general_donation">General Donation</string>

    <string name="toast_message">Please select at least one interest</string>
    <string name="card_cvv">**** 1234</string>

    <string name="insanyah">Insanyah</string>
    <string name="likeModels">Likes</string>
    <string name="required">Required</string>
    <string name="remaining">Remaining</string>
    <string name="sms">SMS</string>
    <string name="currency">Currency:</string>
    <string name="visa_number">Card Number:</string>
    <string name="thanks">THANKS!</string>
    <string name="in_this_big_world">In this big world</string>
    <string name="you">YOU</string>
    <string name="make_a_difference">make a difference</string>
    <string name="donation_methods">Donation Methods</string>
    <string name="or">OR</string>
    <string name="type_amount">Type Amount:</string>
    <string name="interestModels">Interests</string>
    <string name="view_plan_date">23 June 2017</string>
    <string name="view_plan_time">\@6pm - 8pm</string>
    <string name="your_upcoming_donations">Your Upcoming Donations</string>
    <string name="my_donations_time">9AM - 1PM</string>
    <string name="my_donations_name">NGOName</string>
    <string name="my_donations_amount">50 EGP (Egyptian Pound)</string>
    <string name="currency_eg">EGP (Egyptian Pound)</string>
    <string name="currency_dollar">USD (US Dollar)</string>
    <string name="sms_message">Would you like to send a message to 01117773460 ?</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="about_address">Address</string>
    <string name="about_email">Email</string>
    <string name="about_city">City</string>
    <string name="about_neighborhood">Neighborhood</string>
    <string name="collection_time_1">09:00 am - 01:00 pm</string>
    <string name="collection_time_2">01:00 pm - 05:00 pm</string>
    <string name="collection_time_3">05:00 pm - 09:00 pm</string>
    <string name="phone_hint">Phone</string>


</resources>
