<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_news_feed"
            android:icon="@drawable/news_feed"
            android:title="@string/news_feed" />

        <item
            android:id="@+id/nav_my_donations"
            android:icon="@drawable/my_donations"
            android:title="@string/my_donations" />

        <item
            android:id="@+id/nav_select_interests"
            android:icon="@drawable/select_interests"
            android:title="@string/select_interests" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/contact_us"
            android:title="@string/contact_us" />


        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/aboutt"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />



        <!--<item-->
            <!--android:id="@+id/nav_camera"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="Import" />-->
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share" />
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        </menu>
    </item>

</menu>
