<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.insanyah.ui.fragments.ViewPlanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/you_currently_donating"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fifty_pounds"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30dp" />

                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/total_amount_donated"-->
                <!--android:layout_marginStart="30dp"-->
                <!--android:textColor="@color/colorPrimary"/>-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/donation_type"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/next_donation_date"
                    android:textColor="@color/colorPrimary" />

                <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary" />

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:text="@string/friday"-->
                    <!--android:textColor="@color/colorPrimary" />-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/view_plan_date"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/view_plan_time"
                    android:textColor="@color/colorPrimary" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/total_amount_donated"
                    android:textColor="@color/colorPrimary" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@drawable/truck" />
                </RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/twenty_days_rem"
                    android:textColor="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@color/colorPrimary"
                        android:onClick="onClickChangePlan"
                        android:text="@string/change_plan"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:text="@string/cancel_donation"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>


            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</FrameLayout>
