<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.insanyah.ui.fragments.ThankYouFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanks"
            android:textColor="@color/colorPrimary"
            android:textSize="40dp"
            android:layout_gravity="center"
            android:gravity="center" />

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_this_big_world"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you"
            android:textColor="@color/colorPrimary"
            android:textSize="40dp"
            android:layout_gravity="center"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_a_difference"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:gravity="center" />

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/smiley"
            android:layout_gravity="center" />


    </LinearLayout>
    </ScrollView>
    </LinearLayout>
</FrameLayout>
